--- a/Final-Project100.ipynb
+++ b/Final-Project100.ipynb
@@ -5,7 +5,7 @@
    "id": "14577dce-fb96-4295-b1d1-c686dd0952dd",
    "metadata": {},
    "source": [
-    "# DSCI100 FINAL PROJECT"
+    "# DSCI100 FINAL PROJECTing"
    ]
   },
   {
